Shannon limit: comments

--- a/python_phy/jupyter_notebooks/test_capacity.ipynb
+++ b/python_phy/jupyter_notebooks/test_capacity.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "total_bits: int = (PDU_bytes + CRC_bytes + preamble_bytes) * 8  # Number of information bits per packet\n",
     "R: float = 1  # bits per channel use (target rate)\n",
-    "n: int = int(total_bits / R)  # Number of channel uses per packet\n",
+    "channel_uses_per_bit: int = int(total_bits / R)  # Number of channel uses per packet\n",
     "\n",
     "SNR_dB: float = np.linspace(-15, 5, 400)\n",
     "SNR: float = 10 ** (SNR_dB / 10)\n",
@@ -55,6 +55,7 @@
     "\n",
     "# From Eq. (1) in the paper, solved for epsilon = PER\n",
     "def packet_error_rate(SNR: float, n: int, R: float) -> float:\n",
+    "    # n: channel uses per bit\n",
     "    C = capacity(SNR)\n",
     "    V = dispersion(SNR)\n",
     "\n",
@@ -63,7 +64,7 @@
     "    return epsilon\n",
     "\n",
     "\n",
-    "PDR = 1 - packet_error_rate(SNR, n, R)\n",
+    "PDR = 1 - packet_error_rate(SNR, channel_uses_per_bit, R)\n",
     "\n",
     "plt.figure(figsize=(14, 3))\n",
     "plt.plot(SNR_dB, PDR)\n",
