Measure modulation time for BLE and IEEE 802.15.4

--- a/python_phy/jupyter_notebooks/802154_modulation_prototype.ipynb
+++ b/python_phy/jupyter_notebooks/802154_modulation_prototype.ipynb
@@ -218,6 +218,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Elapsed time: 3.6912 milliseconds\n",
+      "class_modulated.dtype = dtype('complex128')\n",
       "[{'payload': array([ 0,  0,  0,  0,  2,  4,  6,  8, 10, 12], dtype=uint8), 'length': 10, 'crc_check': True, 'position_in_array': 484}]\n"
      ]
     },
@@ -233,13 +235,20 @@
     }
    ],
    "source": [
+    "import time\n",
+    "\n",
     "fs = 10e6  # Hz\n",
     "\n",
     "class_payload = np.array([0, 0, 0, 0, 2, 4, 6, 8, 10, 12], dtype=np.uint8)\n",
     "\n",
     "transmitter = Transmitter802154(fs=fs)\n",
+    "start = time.time()\n",
     "class_bits = transmitter.process_phy_payload(class_payload)\n",
     "class_modulated = transmitter.modulate(class_bits, zero_padding=500)\n",
+    "end = time.time()\n",
+    "elapsed = end - start\n",
+    "print(f\"Elapsed time: {elapsed*1000:.4f} milliseconds\")\n",
+    "print(f\"{class_modulated.dtype = }\")\n",
     "\n",
     "receiver = Receiver802154(fs=fs)\n",
     "received_bit_samples = receiver.demodulate(class_modulated)\n",
