--- a/python_phy/jupyter_notebooks/ble_modulation_prototype.ipynb
+++ b/python_phy/jupyter_notebooks/ble_modulation_prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -241,13 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Elapsed time: 2.2798 milliseconds\n",
       "[{'payload': array([ 50, 100, 255], dtype=uint8), 'length': 3, 'crc_check': True, 'position_in_array': 115}]\n"
      ]
     },
@@ -263,12 +264,18 @@
     }
    ],
    "source": [
+    "import time\n",
+    "\n",
     "ble_class_payload = np.array([50, 100, 255], dtype=np.uint8)\n",
     "ble_transmission_rate = 1e6\n",
     "\n",
     "ble_transmitter = TransmitterBLE(fs=fs, transmission_rate=ble_transmission_rate)\n",
+    "start = time.time()\n",
     "ble_class_bits = ble_transmitter.process_phy_payload(ble_class_payload)\n",
     "ble_class_modulated = ble_transmitter.modulate(ble_class_bits, zero_padding=500)\n",
+    "end = time.time()\n",
+    "elapsed = end - start\n",
+    "print(f\"Elapsed time: {elapsed*1000:.4f} milliseconds\")\n",
     "\n",
     "ble_receiver = ReceiverBLE(fs=fs, transmission_rate=ble_transmission_rate)\n",
     "ble_received_bit_samples = ble_receiver.demodulate(ble_class_modulated)\n",
